kubernetes/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-d
  labels:
    app: analysis-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analysis
  template:
    metadata:
      labels:
        app: analysis
    spec:
      containers:
        - name: analysis
          image: blunderingpb/twitter-analyser:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: google-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true
          ports:
            - containerPort: 8002
              name: probe-port
          livenessProbe:
            httpGet:
              path: /health
              port: probe-port
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: google-account-credentials-volume
          secret:
            secretName: google-credentials-secret
            items:
              - key: twitteranalytics-310723-f09ac30d22c2
                path: twitteranalytics-310723-f09ac30d22c2.json
