kubernetes/webserver-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webserver-ss
  labels:
    app: webserver-deploy
spec:
  replicas: 1
  serviceName: webserver-service
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: blunderingpb/twitter-analytics:latest
          volumeMounts:
            - name: google-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true
          ports:
            - containerPort: 80
              name: probe-port
          livenessProbe:
            httpGet:
              path: /health
              port: probe-port
            initialDelaySeconds: 5
            periodSeconds: 5
  volumes:
    - name: google-account-credentials-volume
      secret:
        secretName: google-credentials-secret
        items:
          - key: twitteranalytics-310723-f09ac30d22c2
            path: twitteranalytics-310723-f09ac30d22c2.json
